<resources>
    <string name="app_name">MixUM</string>
    <string name="select_image">Select Image</string>
    <string name="type_message">Type a message</string>
    <string name="Send">Send</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Signup">Don\'t have an account? Signup</string>
    <string name="Sign_up">Sign Up</string>
    <string name="Login_account">Already have an account? Login</string>
    <string name="create_account">Create Account</string>
    <string name="todo">TODO</string>
    <string name="full_name">Full Name</string>
    <string name="Age">Age</string>
    <string name="Gender">Gender</string>
    <string name="Location">Location</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Save_Profile">Save Profile</string>
    <string name="Matches">Matches</string>
    <string name="profile_image_description">Profile picture</string>
    <string name="user_name">John Doe</string>,
    <string name="age_label">25</string>
    <string name="location_label">New York</string>,
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>,
    <string name="create_profile">Create Profile</string>
    <string name="upload">Upload</string>










</resources>